--- a/frontend/html/gestUsuario.html
+++ b/frontend/html/gestUsuario.html
@@ -27,7 +27,8 @@
       <h1>Eventos</h1>
     </div>
   </header>
-  <h1>Base de datos de Usuario (No se conecta MYSQL AUN)</h1>
+  <div id="app"></div>
+  <script src="../js/ExampleTable.js"></script>
 </body>
 
 </html>
