tablas generos, lenguajes y ciudades, get y post

--- a/frontend/html/ciudades.html
+++ b/frontend/html/ciudades.html
@@ -32,11 +32,9 @@
       <div class="container">
         <div class="card">
           <h2 class="center">Ingrese datos de Ciudades</h2>
-          <form action="#" novalidate>
-            <div class="form_control">
+          <form id="form_control" novalidate >
               <input type="text" name="nombre" id="ciudades" placeholder="Nombre de la Ciudad" autocomplete="off"
                 autofocus required>
-            </div>
             <button type="submit" id="btn_añadir">Añadir</button>
           </form>
         </div>
@@ -44,6 +42,7 @@
     </section>
   </main>
   <script type="module" src="../js/valiGenral.js"></script>
+  <script type="module" src="../js/guardarGenerico.js"></script>
 </body>
 
 </html>
