--- a/frontend/html/gestGeneros.html
+++ b/frontend/html/gestGeneros.html
@@ -27,7 +27,8 @@
       <h1>Eventos</h1>
     </div>
   </header>
-  <h1>Base de datos de Generos (No se conecta MYSQL AUN)</h1>
+   <div id="app" data-id="generos"></div>
+  <script src="../js/ciudades.js"></script>
 </body>
 
 </html>
