--- a/frontend/html/lenguajes.html
+++ b/frontend/html/lenguajes.html
@@ -32,11 +32,11 @@
       <div class="container">
         <div class="card">
           <h2 class="center">Ingrese datos de Lenguaje</h2>
-          <form action="#" novalidate>
-            <div class="form_control">
+          <form action="#" id="form_control" novalidate>
+           
               <input type="text" name="nombre" id="lenguajes" placeholder="Nombre del Lenguaje" autocomplete="off"
                 autofocus required>
-            </div>
+            
             <button type="submit" id="btn_añadir">Añadir</button>
           </form>
         </div>
@@ -44,6 +44,7 @@
     </section>
   </main>
   <script type="module" src="../js/valiGenral.js"></script>
+  <script type="module" src="../js/guardarGenerico.js"></script>
 </body>
 
 </html>
