--- a/frontend/html/gestCiudades.html
+++ b/frontend/html/gestCiudades.html
@@ -27,7 +27,8 @@
       <h1>Eventos</h1>
     </div>
   </header>
-  <h1>Base de datos de Ciudades (No se conecta MYSQL AUN)</h1>
+  <div id="app" data-id="ciudades"></div>
+  <script src="../js/ciudades.js"></script>
 </body>
 
 </html>
