tablas de usuario y form

--- a/frontend/html/register.html
+++ b/frontend/html/register.html
@@ -45,10 +45,6 @@
             <div class="form_control">
               <select name="ciudad" required>
                 <option class="oculto">Seleccione</option>
-                <option value="1">Floridablanca</option>
-                <option value="2">Piedecuesta</option>
-                <option value="3">Bucaramanga</option>
-                <option value="4">Giron</option>
               </select>
             </div>
             <div class="form_control">
@@ -64,52 +60,11 @@
               <label>Lenguajes de Programacion:</label>
               <div class="form_detalle">(minimo 3)</div>
               <div class="form_lenguaje">
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="html" value="1" required>
-                  <label for="lenguajes">HTML</label>
-                </div>
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="css" value="2" required>
-                  <label for="lenguajes">CSS</label>
-                </div>
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="JavaScript" value="3" required>
-                  <label for="lenguajes">JavaScript</label>
-                </div>
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="php" value="4" required>
-                  <label for="lenguajes">PHP</label>
-                </div>
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="java" value="5" required>
-                  <label for="lenguajes">Java</label>
-                </div>
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="c#" value="6" required>
-                  <label for="lenguajes">C#</label>
-                </div>
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="sql" value="7" required>
-                  <label for="lenguajes">SQL</label>
-                </div>
-                <div class="form_lenguajesCheck">
-                  <input type="checkbox" name="lenguaje[]" id="phyton" value="8" required>
-                  <label for="lenguajes">Phyton</label>
-                </div>
-              </div>
             </div>
             <div class="form_control">
               <label>Generos:</label>
-              <div>
-                <div class="form_radio">
-                  <input type="radio" id="hombre" name="genero" value="1" required>
-                  <label for="hombre">Hombre</label>
-                </div>
-                <div class="form_radio">
-                  <input type="radio" id="mujer" name="genero" value="2" required>
-                  <label for="mujer">Mujer</label>
-                </div>
-              </div>
+              <div class="form_generos">
+               
             </div>
             <div class="form_control form_politico">
               <input type="checkbox" name="politicas" id="politicas">
