--- a/frontend/html/gestUsuario.html
+++ b/frontend/html/gestUsuario.html
@@ -28,7 +28,7 @@
     </div>
   </header>
   <div id="app"></div>
-  <script src="../js/ExampleTable.js"></script>
+  <script src="../js/getUsers.js"></script>
 </body>
 
 </html>
