tablas generos, lenguajes y ciudades, get y post

--- a/frontend/html/gestGeneros.html
+++ b/frontend/html/gestGeneros.html
@@ -28,7 +28,7 @@
     </div>
   </header>
    <div id="app" data-id="generos"></div>
-  <script src="../js/ciudades.js"></script>
+  <script src="../js/listar_general.js"></script>
 </body>
 
 </html>
