--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,9 @@
   <header>
     <div class="container">
       <h1>Eventos</h1>
+      <p>Buenas instructor este mensaje es para responderle la pregunta donde:</p>
+      <p>Edixon Castillo: Frontend</p>
+      <p>Helder Amado: Backend</p>
     </div>
   </header>
 </body>
